# SwapPilot

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  SwapPilot-Project-Structure.md  SwapPilot.md  VIDEO_DEMO_SCRIPT.md  docker-compose.yml  package-lock.json
.github/workflows/: ai-engine.yml  contracts.yml  frontend.yml
ai-engine/: .env.example  Dockerfile  pyproject.toml  requirements.txt
ai-engine/data/: backtest_results.csv
ai-engine/data/models/: rf_metrics.json  scaler.pkl  transformer_history.json
ai-engine/data/processed/: features.npy  labels.npy
ai-engine/scripts/: backtest.py  fetch_data.py  train_model.py
ai-engine/src/data/: collector.py  dataset.py  labeler.py
ai-engine/src/features/: cross_chain.py  extractor.py  preprocessor.py
ai-engine/src/inference/: fee_mapper.py  predictor.py
ai-engine/src/models/: ensemble.py  random_forest.py  transformer.py
ai-engine/src/server/: app.py  middleware.py  routes.py
ai-engine/src/swappilot_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-engine/src/training/: evaluate.py  hyperparams.py  train.py
ai-engine/src/utils/: web3_client.py
ai-engine/tests/: test_api.py  test_ensemble.py  test_features.py  test_labeler.py  test_transformer.py
contracts/: .env.example  foundry.toml  remappings.txt
docs/: ai-model-spec.md  api-reference.md  architecture.md  deployment-guide.md  reactive-integration.md
frontend/: .env.local.example  jest.config.js  package-lock.json  package.json  vercel.json
frontend/src/app/: globals.css  (+2 more)
scripts/: integration-test.sh  sync-abis.sh
(+98 files in other folders)
